--- a/Sequence.css
+++ b/Sequence.css
@@ -15,46 +15,55 @@
 /* already written in style.css */
 
 /* Step2:  component */
-.heroSection {
+.welcomeSection {
     /* background-color: #ffd000; */
-    padding: var(--padding);
 }
 
 /* Step3: componentContainer */
-.heroContainer {
+.welcomeContainer {
     /* background-color: #01325c; */
-    padding: var(--padding);
 }
 
 /* Step4: row */
-.heroBody {
+.welcomeBody {
     /* background-color: #0088ff; */
-    padding: var(--padding);
 }
 
 /* Step5: column */
-.heroBlock {
+.welcomeImgBlock {
     /* background-color: #4aabff; */
-    padding: var(--padding);
 }
 
 /* Step6: subColumn */
-.heroBox {
+.welcomeImgBox {
     /* background-color:#8a7a67; */
-    padding: var(--padding);
 }
 
 /* Step7: contentContainer */
-.heroBox h1 {
+.welcomeImgBox img{
     /* background-color: #0f416c; */
-    padding: var(--padding);
 }
 
-.heroBox p {
-    /* background-color: #40688a; */
-    padding: var(--padding);
+
+
+/* Step5: column */
+.welcomeContentBlock {
+    /* background-color: #4aabff; */
 }
-.heroBox button {
-    /* background-color: var(--darkColor); */
-    padding: var(--padding);
+
+/* Step6: subColumn */
+.welcomeContentBox {
+    /* background-color:#8a7a67; */
+}
+
+/* Step7: contentContainer */
+.welcomHeading {
+    /* background-color: #0f416c; */
+}
+
+.welcomeContentBox h3 {
+    /* background-color: #40688a; */
+}
+.welcomeContent {
+    /* background-color: #40688a; */
 }
